--- a/CosmeticShop/CosmeticShop/Views/Home/AboutUs.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/AboutUs.cshtml
@@ -1,4 +1,9 @@
-﻿<div id="rule-saler"></div>
+﻿<style>
+    body{
+        background-color: #1A1310 !important;
+    }
+</style>
+<div id="rule-saler"></div>
 <section class="menu-nav">
     <nav id="navbar-mynavbar" class="justify-content-center navbar navbar-light">
         <ul class="nav nav-pills">
@@ -111,7 +116,7 @@
                 </p>
                 <p class="text-descript">
                     Используя сайт, Вы соглашаетесь с условиями данного соглашения.<br>
-                    <b>Если Вы не согласны с условиями данного соглашения, не используйте сайт Space Store!</b>
+                    <b>Если Вы не согласны с условиями данного соглашения, не используйте сайт Il Piacere!</b>
                 </p>
                 <h3>Права сторон</h3>
                 <h5>Пользователь имеет право:</h5>
