--- a/CosmeticShop/CosmeticShop/Views/OrderProcessing/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/OrderProcessing/Details.cshtml
@@ -1,5 +1,10 @@
 @model CosmeticShop.Models.Products.Order
 
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 
 <section class="container-orders create-product-container container-myself-info">
 
