--- a/CosmeticShop/CosmeticShop/Views/ProductCategories/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductCategories/Index.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 <section class="table-add-product">
     <div class="create-product">
             <a asp-action="Create" class="btn-create-product">Добавить категорию</a>
