--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 <section class="create-product-container">
     <h2>Добавление товара</h2>
     <div class="container-prosuct">
