--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Edit.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Edit.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style> 
 <section class="create-product-container">
     <h2>Редактирование товара</h2>
     <div class="container-prosuct">
