--- a/CosmeticShop/CosmeticShop/Views/Roles/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Roles/Index.cshtml
@@ -1,5 +1,9 @@
 @model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
-
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 <section class="table-roles container-myself-info">
     <h2>Список ролей</h2>
     <table class="table text-center">
