--- a/CosmeticShop/CosmeticShop/Views/Traiding/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Details.cshtml
@@ -3,7 +3,13 @@
     ViewData["Title"] = "Details";
 }
 
+<style>
+    body{
+        background-color: #1A1310 !important;
+    }
+</style>
 @* <h1>Товар</h1>
+
 
 <div>
     <h4>ProductContainer</h4>
