--- a/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
@@ -10,7 +10,10 @@
         font-weight: normal;
         font-style: normal
     }
-
+    body{
+        
+        background-color: #1A1310 !important;
+    }
     .glyphicon {
         display: inline-block;
         font: normal normal normal 14px/1 FontAwesome;
@@ -51,7 +54,7 @@
 </section>
 
 
-<section class="container">
+<section class="traiding-container container">
     <div class="navigation">
         <div id="aside">
             <div class="list-group list-group-flush">
