--- a/CosmeticShop/CosmeticShop/wwwroot/css/CardProduct.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/CardProduct.css
@@ -1,7 +1,8 @@
 /* ---------------карусель--------------- */
 body .carusel-element{
     width: auto;
-    margin: 0px 140px 60px 130px;
+    margin: 120px 140px 60px 130px;
+    font-family: 'Montserrat', sans-serif !important;
 }
 body .carusel-element .container-fluid{
     width: auto;
@@ -9,13 +10,12 @@ body .carusel-element .container-fluid{
 }
 body .carusel-element .container-fluid h2{
     padding-bottom: 40px;
-    font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
     font-size: 32px;
     line-height: 101.18%;
 
-    color: #271403;
+    color: #ffffff;
     margin: 0 200px;
 }
 body .carusel-element .container-fluid .carousel .carousel-inner{
@@ -28,9 +28,10 @@ body .carusel-element .container-fluid .carousel .carousel-inner{
 body .card-group{
     width: 900px;
     margin: 0 80px 0px 80px;
+    
 }
 body .card-group .card{
-    background-color: #FFF8F4!important;
+    background-color: #1A1310 !important;
     width: 288px;
     height: auto;
     padding-right: 20px;
@@ -53,10 +54,11 @@ body  .card-group .card .img-body .card-img{
 body .card-group .card .card-body .card-title{
     height: auto;
     margin-top:15px;
-    padding: 0px 50px 0px 50px;
+    padding: 0px 5px;
     
-    color: #341900;
-    font-family: Crimson Text;
+    
+    font-family: 'Montserrat', sans-serif !important;
+    color: #ffffff;
     font-style: normal;
     font-weight: 600;
     font-size: 22px;
@@ -65,31 +67,30 @@ body .card-group .card .card-body .card-title{
 }
 body .card-group .card .card-body .card-subtitle{
     margin-top: 6px;
-    /* padding: 0px 96px 0px 96px; */
-
-    font-family: 'Raleway', sans-serif;
+    
+    font-family: 'Montserrat', sans-serif !important;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
-    color: rgba(61, 29, 0, 0.7);
+    color: rgba(255, 255, 255, 0.7);
     text-align: center;
 }
 body .card-group .card .card-body .card-price{
     padding-top: 15px;
-
-    font-family: 'Cormorant SC', serif;
+    
+    font-family: 'Montserrat', sans-serif !important;
     font-style: normal;
     font-weight: 500;
     font-size: 26px;
     line-height: 34px;
-
-    color: #341900;
+    
+    color: #ffffff;
 }
 body .card-group .card .card-body .card-price .card-price-cost{
     margin-left: 5px;
     
-    font-family: 'Cormorant SC', serif;
+    font-family: 'Montserrat', sans-serif !important;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -102,15 +103,17 @@ body .card-group .card .card-body .btn{
     margin-top: 20px;
     padding: 16px 35px;
     border-radius: 30px !important;
-    background-color: #A93E4D;
     
-    color: #fff;
-    font-family: 'Raleway', sans-serif;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 13px;
     line-height: 107.9%;
     letter-spacing: 0.02em; 
+    
+    
+    color: #F6AF3D;
+    border: 1px solid #F6AF3D;
+    background-color: #1A1310 !important;
 }
 
 
