--- a/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
@@ -3,47 +3,48 @@
 @{
   ViewData["Title"] = "Home Page";
 }
-@* <section class="additional-menu container-fluid">
+
+<style>
+  body {
+    background-image: url('/image/Back/background2.png');
+  }
+</style>
+
+
+@* <section class="main-element container-fluid">
   <div class="container-fluid">
-  <ul class="nav">
-  <li class="nav-item">
-  <a class="nav-link" href="#">Макияж</a>
-  </li>
-  <li class="nav-item">
-  <a class="nav-link" href="#">Парфюмерия</a>
-  </li>
-  <li class="nav-item">
-  <a class="nav-link" href="#">Волосы</a>
-  </li>
-  <li class="nav-item">
-  <a class="nav-link" href="#">Уход</a>
-  </li>
-  <li class="nav-item">
-  <a class="nav-link" href="#">Тело</a>
-  </li>
-  </ul>
+  <div class="text-container">
+  <h1 class="text-title">“Мода исчезает, только</br>
+  стиль остается прежним” <small class="quote">- Coco Chanel</small></h1>
+  <div class="text-content">
+  <h3 class="text-collection">Коллекция eSpoir Colorful Nude </h3>
+  <p class="discription">
+  Базовые косметики от eSpoir всегда считались хорошим соотношением цены и качества, поэтому они
+  очень популярны среди корейцев. Недавно eSpoir выпустила коллекцию с широким спектром
+  фундамента, доступного как в матовой, так и в светяной отделке.
+  </p>
+  </div>
+  <a asp-action="Index" asp-controller="Traiding" class="btn">Перейти в магазин</a>
+  </div>
+  <div class="image-container">
+  <!-- <div></div> -->
+  <img src="~/image/card/main.png" alt="main">
+  <!-- <div></div> -->
+  </div>
   </div>
   </section> *@
-
 <section class="main-element container-fluid">
   <div class="container-fluid">
     <div class="text-container">
-      <h1 class="text-title">“Мода исчезает, только</br>
-        стиль остается прежним” <small class="quote">- Coco Chanel</small></h1>
+      <h1 class="text-title">ЛУЧШИЕ <span>ИТАЛЬЯНСКИЕ БЛЮДА</span></br>
+        У ВАС НА ТАРЕЛКЕ</h1>
       <div class="text-content">
-        <h3 class="text-collection">Коллекция eSpoir Colorful Nude </h3>
         <p class="discription">
-          Базовые косметики от eSpoir всегда считались хорошим соотношением цены и качества, поэтому они
-          очень популярны среди корейцев. Недавно eSpoir выпустила коллекцию с широким спектром
-          фундамента, доступного как в матовой, так и в светяной отделке.
+          Самое большое разнообразие итальянских блюд!
+          Бесплатная доставка, без минимальной суммы заказа. Доставим за 30-60 минут.
         </p>
       </div>
-      <a  asp-action="Index" asp-controller="Traiding" class="btn">Перейти в магазин</a>
-    </div>
-    <div class="image-container">
-      <!-- <div></div> -->
-      <img src="~/image/card/main.png" alt="main">
-      <!-- <div></div> -->
+      <a asp-action="Index" asp-controller="Traiding" class="btn">Наше меню</a>
     </div>
   </div>
 </section>
@@ -58,10 +59,6 @@
       <h2>Новинки</h2>
 
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-
-        @* <img style='width:250px; height:250px;' src=\"data:image/jpeg;base64,"
-          + Convert.ToBase64String(item.ByteImage) + "\" /> *@
-
 
         <div class="carousel-inner">
 
@@ -226,112 +223,6 @@
 
 
         </div>
-        @*<div class="carousel-inner">
-
-
-
-
-
-          <div class="carousel-item active">
-          <div class="card-group">
-
-
-
-          <div class="card text-center border-0">
-          <img src="/image/card/second.png" class="card-img card-img-top" alt="...">
-          <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle text-muted">Card subtitle</h6>
-          <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
-          </h4>
-          <a href="#" class="btn">Добавить в корзину</a>
-          </div>
-          </div>
-
-
-
-          <div class="card text-center border-0">
-          <img src="/image/card/second.png" class="card-img card-img-top" alt="...">
-          <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle text-muted">Card subtitle</h6>
-          <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
-          </h4>
-          <a href="#" class="btn">Добавить в корзину</a>
-          </div>
-          </div>
-
-
-          <div class="card text-center border-0">
-          <img src="/image/card/third.png" class="card-img card-img-top" alt="...">
-          <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle text-muted">Card subtitle</h6>
-          <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
-          </h4>
-          <a href="#" class="btn">Добавить в корзину</a>
-          </div>
-          </div>
-
-
-          </div>
-          </div>
-
-
-
-          <div class="carousel-item">
-          <div class="card-group">
-
-
-
-
-          <div class="card text-center border-0">
-          <img src="/image/card/fourth.png" class="card-img card-img-top" alt="...">
-          <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle text-muted">Card subtitle</h6>
-          <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
-          </h4>
-          <a href="#" class="btn">Добавить в корзину</a>
-          </div>
-          </div>
-
-
-
-          <div class="card text-center border-0">
-          <img src="/image/card/fifth.png" class="card-img card-img-top" alt="...">
-          <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle text-muted">Card subtitle</h6>
-          <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
-          </h4>
-          <a href="#" class="btn">Добавить в корзину</a>
-          </div>
-          </div>
-
-
-
-          <div class="card text-center border-0">
-          <img src="/image/card/sisxth.png" class="card-img card-img-top" alt="...">
-          <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle text-muted">Card subtitle</h6>
-          <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
-          </h4>
-          <a href="#" class="btn">Добавить в корзину</a>
-          </div>
-          </div>
-
-
-
-          </div>
-          </div>
-
-
-          </div> *@
-
-
-
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <img src="/image/card/arrow-left.png" alt="">
 
