--- a/CosmeticShop/CosmeticShop/Views/Orders/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Orders/Details.cshtml
@@ -3,64 +3,11 @@
     ViewData["Title"] = "Details";
 }
 
-@* <h1>Товар</h1>
-
-<div>
-    <h4>ProductContainer</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            <p>В наличии:</p>
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CountProducts)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cost)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cost)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ExpirationDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ExpirationDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductCategory)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductCategory.Name)
-        </dd>
-
-        <table>
-            <tr>
-                <th>Картинка</th>
-            </tr>
-
-
-        </table>
-    </dl>
-</div> *@
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 
 
 <section class="order-product-element">
