--- a/CosmeticShop/CosmeticShop/Views/PersonalArea/PersonalData.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/PersonalArea/PersonalData.cshtml
@@ -1,13 +1,8 @@
-@* <p>личные данные</p>
-
-<p>Email</p>
-<p>@User.Identity.Name</p>
-
-<a asp-controller="Account" asp-action="ForgotPassword">ChangePassword</a>
-
-<form method="post" asp-controller="Account" asp-action="Logout">
-    <input type="submit" value="Выход" />
-</form> *@
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 
 <section class="create-product-container">
 
