--- a/CosmeticShop/CosmeticShop/Views/ProductCategories/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductCategories/Details.cshtml
@@ -4,23 +4,11 @@
     ViewData["Title"] = "Details";
 }
 
-@* <h1>Details</h1>
-
-<div>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div> *@
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 
 
 <section class="create-product-container">
