--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Details.cshtml
@@ -4,88 +4,11 @@
     ViewData["Title"] = "Details";
 }
 
-@* <section class="details-product-container">
-    <div class="first">
-
-    </div>
-    <div class="second">
-
-    </div>
-</section>
-
-<h1>Details</h1>
-
-<div>
-    <h4>ProductContainer</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CountProducts)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CountProducts)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cost)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cost)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ExpirationDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ExpirationDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductCategory)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ProductCategory.Name)
-        </dd>
-
-        <table>
-            <tr>
-                <th>Название</th>
-                <th>Картинка</th>
-            </tr>
-            @foreach (var item in Model.ProductPictures.Pictures)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.Raw("<img style='width:250px; height:250px;' src=\"data:image/jpeg;base64,"
-                    + Convert.ToBase64String(item.ByteImage) + "\" />")
-                    </td>
-                </tr>
-            }
-        </table>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div> *@
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 
 <section class="order-product-element">
     <table class="order-product-container">
