--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/EditImages.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/EditImages.cshtml
@@ -1,50 +1,10 @@
 @model CosmeticShop.Models.AuxiliaryEntities.ProductPictures
 
-@* <div>
-    <table>
-        <tr>
-            <th>Название</th>
-            <th>Картинка</th>
-            <th>Удалить</th>
-        </tr>
-        @foreach (var item in Model.Pictures)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.Raw("<img style='width:250px; height:250px;' src=\"data:image/jpeg;base64,"
-                + Convert.ToBase64String(item.ByteImage) + "\" />")
-                </td>
-                <td>
-                    @Html.ActionLink("Удалить", "DeleteImage", "ProductContainers", new { id = Model.ProductContainerId,
-                imageId = item.Id}, null)
-                </td>
-            </tr>
-        }
-    </table>
-</div> *@
-
-@* <form asp-action="AddImages" enctype="multipart/form-data">
-    <input type="number" name="Id" value="@Model.ProductContainerId" hidden>
-    <div>
-    <div>
-    <p>Добавить картинки</p>
-    <label for="countImages">Количество картинок</label>
-    <input type="number" name="countImages" id="countImages" oninput="displayLoadImagesElements()" />
-    </div>
-
-    <div id="images">
-    </div>
-    </div>
-
-    <div class="form-group">
-    <input type="submit" value="Save" class="btn btn-primary" />
-    </div>
-    </form> *@
-
-
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 
 <section class="container-orders create-product-container container-myself-info">
     <div class="container-order back-blur">
