--- a/CosmeticShop/CosmeticShop/Views/Roles/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Roles/Create.cshtml
@@ -1,14 +1,10 @@
 @model string
  
-@* <div asp-validation-summary="All" class="text-danger"></div>
- 
-<form asp-action="Create" method="post">
-    <div class="form-group">
-        <label for="name">Новая роль</label>
-        <input name="name" class="form-control" />
-    </div>
-    <button type="submit" class="btn btn-primary">Добавить</button>
-</form> *@
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 
 
 <section class="create-product-container">
