--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -40,25 +40,18 @@
         <div class="container-fluid">
 
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/image/logo.png" alt="logo-header" id="logo-header">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-first navbar-nav justify-content-center">
                         <a class="nav-item nav-link active" asp-area="" asp-controller="Home"
                             asp-action="Index">Главная</a>
                         <a class="nav-item nav-link active" asp-area="" asp-controller="Traiding"
-                            asp-action="Index">Магазин</a>
-                        <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="Contacts">Контакты</a>
+                            asp-action="Index">Меню</a>
                         <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="AboutUs">Поддержка</a>
+                        <a class="nav-item nav-link active" asp-area="" asp-controller="Home" asp-action="Contacts">Контакты</a>
 
                     </div>
                     <div class="navbar-second navbar-nav  justify-content-end">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">
+                        <a class="nav-link nav-item text-dark" asp-area="" asp-controller="Orders" asp-action="Index">
                             <img src="~/image/shopping-bag.png" alt="user" style="width: auto; height: auto;">
                         </a>
 
@@ -84,7 +77,7 @@
 
 
                         <div class="dropdown">
-                            <button class="btn btn-circle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                            <button class="btn btn-circle nav-item"  type="button" id="dropdownMenuButton" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                 <img src="~/image/user.png" alt="user-header">
                             </button>
@@ -112,6 +105,14 @@
                         </div>
                     </div>
                 </div>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/image/logo.png" alt="logo-header" id="logo-header">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
             </nav>
         </div>
 
@@ -167,9 +168,9 @@
                 <div class="col-xs-2 col-md-2">
                     <h5>Контакты</h5>
                     <ul class="footer-links">
-                        <li><a href="tel:+375297418529"> <img src="/image/phone.png" alt="phone"> +375(29) 741-85-29</a>
+                        <li><a href="tel:+375297418529"> <img src="/image/phone-call.png" alt="phone"> +375(29) 741-85-29</a>
                         </li>
-                        <li><a href="mail:vicosmetic@gmail.com"> <img src="/image/email.png" alt="email">
+                        <li><a href="mail:vicosmetic@gmail.com"> <img src="/image/envelope.png" alt="email">
                                 vicosmetic@gmail.com</a></li>
                     </ul>
                 </div>
