--- a/CosmeticShop/CosmeticShop/Views/Users/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Users/Create.cshtml
@@ -2,20 +2,11 @@
 @{
     ViewBag.Title = "Добавление пользователя";
 }
-@* <form asp-action="Create" asp-controller="Users">
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email" class="control-label">Email</label>
-        <input type="text" asp-for="Email" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label asp-for="Password" class="control-label">Пароль</label>
-        <input type="password" asp-for="Password" class="form-control" />
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Добавить" class="btn btn-outline-secondary" />
-    </div>
-</form> *@
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 
 <section class="create-product-container">
 
@@ -25,30 +16,7 @@
         <div class="row">
             <div class="col">
 
-                @* <form asp-action="ChangePassword" asp-controller="Users">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-
-                    <input type="hidden" asp-for="Id" />
-                    <input type="hidden" asp-for="Email" />
-                    <div class="form-group">
-                    <label asp-for="OldPassword" class="text-lable control-label">Старый пароль</label>
-                    <input type="text" asp-for="OldPassword" class="form-input form-control" />
-                    </div>
-                    <div class="form-group">
-                    <label asp-for="NewPassword" class="text-lable control-label">Новый пароль</label>
-                    <input type="text" asp-for="NewPassword" class="form-input form-control" />
-                    </div>
-
-                    <div class="product-cat-btn">
-
-                    <div class="form-group d-inline">
-                    <a asp-action="Index" class="input-back">Вернуться назад</a>
-                    </div>
-                    <div class="form-group d-inline">
-                    <input type="submit" value="Сохранить" class="btn-create btn" />
-                    </div>
-                    </div>
-                    </form> *@
+               
 
                 <form asp-action="Create" asp-controller="Users">
                     <div asp-validation-summary="All" class="text-danger"></div>
@@ -60,9 +28,6 @@
                         <label asp-for="Password" class="text-lable control-label">Пароль</label>
                         <input type="password" asp-for="Password" class="form-input form-control" />
                     </div>
-                    @* <div class="form-group">
-                        <input type="submit" value="Добавить" class="btn btn-outline-secondary" />
-                        </div> *@
                     <div class="product-cat-btn">
 
                         <div class="form-group d-inline">
