--- a/CosmeticShop/CosmeticShop/Views/Users/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Users/Index.cshtml
@@ -3,31 +3,11 @@
     ViewBag.Title = "Список пользователей";
 }
 
-@* <a asp-action="Create">Добавить пользователя</a>
-
-<table class="table">
-    <tr>
-        <th>Email</th>
-        <th>Год</th>
-        <th></th>
-    </tr>
-    @foreach (var user in Model)
-    {
-        <tr>
-            <td>@user.Email</td>
-            <td>
-                <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">Изменить</a>
-                    <a class="btn btn-sm btn-primary" asp-action="ChangePassword" asp-route-id="@user.Id">Сменить пароль</a>
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Удалить
-                    </button>
-                </form>
-            </td>
-        </tr>
+<style>
+    body {
+        background-color: #1A1310 !important;
     }
-</table> *@
-
+</style>
 
 <section class="table-roles container-myself-info">
     <h2>Список ролей</h2>
