--- a/CosmeticShop/CosmeticShop/wwwroot/css/LayoutFooter.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/LayoutFooter.css
@@ -1,21 +1,17 @@
-body {
-    background-color: #FFF8F4!important;
-    font-family: Crimson Text!important;
-}
 body .site-footer{
-    background-color: rgba(214, 204, 195, 0.5);
+    background-color: #1A1310 !important;
 
     padding: 40px 150px 17px 150px;
     line-height:24px;
 }
 .site-footer .container-fluid .row hr
 {
-  color:rgba(61, 29, 0, 0.5);
+  background: rgb(236, 236, 236);
   opacity:0.5
 }
 .site-footer .container-fluid .row h5
 {
-  color:#271403;
+  color:#ffffff;
   font-size:14px;
   font-weight: 400;
   margin-top:5px;
@@ -26,11 +22,11 @@ body .site-footer{
     font-size: 12px;
     font-weight: 100;
     text-decoration: none;
-    color:rgba(39, 20, 3, 0.7);
+    color:rgba(255, 255, 255, 0.7);
 }
 .site-footer .container-fluid .row .footer-links a:hover
 {
-  color:rgb(61, 29, 0);
+  color:rgb(255, 255, 255);
   font-weight: 600;
   text-decoration:none;
 }
@@ -63,6 +59,7 @@ body .site-footer{
 {
   margin:0;
   text-align: center;
+  color: #FFF8F4;
 }
 @media (max-width:991px)
 {
