--- a/CosmeticShop/CosmeticShop/wwwroot/css/ProductContainersIndex.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/ProductContainersIndex.css
@@ -1,7 +1,7 @@
 body .table-add-product{
     margin: 10px 50px 80px 50px;
     width: auto;
-    background-color: #FFF8F4!important;
+    background-color: #1A1310 !important;
 }
 body .table-add-product .create-product {
     margin: 40px 0px;
@@ -9,53 +9,48 @@ body .table-add-product .create-product {
 }
 body .table-add-product .btn-create-product{
     padding: 16px 55px;
-    border: 2px solid #A93E4D;
+    border: 2px solid #F9BA01;
     border-radius: 30px;
     width: auto;
-    background-color: #FFF8F4!important;
+    background-color: #1A1310 !important;
 
-    font-family: 'Raleway';
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
     line-height: 107.9%;
 
     letter-spacing: 0.02em;
-    color: #A93E4D;
+    color: #F9BA01;
     margin-right: 20px;
 }
 body .table-add-product .table, body .table-add-product .table-categories{
-    background-color: #FFF8F4!important;
+    background-color: #1A1310 !important;
     padding: 40px 20px !important;
-    font-family: Crimson Text;
-    border: 1px solid rgba(61, 29, 0, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.2);
 }
 body .table-add-product .table thead, body .table-add-product .table-categories thead{
-    
-    background-color: rgba(214, 204, 195, 0.5);
     padding: 31px 20px;
-    font-family: Crimson Text;
     font-style: normal;
     font-size: 20px;
     line-height: 33px;
     text-align: left !important;
+    color: #fff;
 }
 body .table-add-product .table tbody td:first-child {text-align: center;}
 body .table-add-product .table thead tr:last-child, body .table-add-product .table-categories thead tr:last-child{
     height: 40px;
-    background-color: #FFF8F4 !important;
-    border: 1px solid #FFF8F4;
+    background-color: #1A1310 !important;
 }
 body .table-add-product .table tbody, body .table-add-product .table-categories tbody {
-    font-family: Crimson Text;
+    color: #fff;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 22px;
     text-align: left;
 }
 body .table-add-product .table tbody tr, .table-add-product .table thead tr, body .table-add-product .table-categories tbody tr, .table-add-product .table-categories thead tr{
-    border: 1px solid rgba(61, 29, 0, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.2);
 }
 body .table-add-product .table tbody td:nth-child(1) {
     width: auto;
@@ -81,10 +76,10 @@ body .table-add-product .table .table-thead tr th, body .table-add-product .tabl
     padding: 20px 31px;
 }
 body .table-add-product .table .btn-product, body .table-add-product .table-categories .btn-product{
-    font-family: Crimson Text;
+    
     font-style: normal;
     font-weight: normal;
-    font-size: 15px;
+    font-size: 14px;
     line-height: 22px;
     text-decoration-line: underline;
     color: red;
@@ -107,7 +102,7 @@ body .table-add-product .table .btn-delete, body .table-add-product .table-categ
 }
 
 body .table-add-product .table tbody tr:hover, body .table-add-product .table-categories tbody tr:hover{
-    color: #A93E4D;
+    color: #F9BA01;
 }
 
 /* ---------------table-categories----------------- */
@@ -118,7 +113,7 @@ body .table-add-product .table-categories thead th:nth-child(1) {
     padding: 10px 30px;
 }
 body .table-add-product .table-categories thead th:nth-child(2) {
-    border-right: 1px solid rgba(61, 29, 0, 0.2);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
   
 }
 body .table-add-product .table-categories tbody td:nth-child(1) {
@@ -128,8 +123,8 @@ body .table-add-product .table-categories tbody td:nth-child(1) {
 body .table-add-product .table-categories tbody td:nth-child(2){
     width: 400px;
     padding: 8px 30px;
-    border-right: 1px solid rgba(61, 29, 0, 0.2);
-    border-left: 1px solid rgba(61, 29, 0, 0.1);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 .product-cat-btn{
     margin: 10px 302px 0 302px;
