--- a/CosmeticShop/CosmeticShop/wwwroot/css/TraidingFilter.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/TraidingFilter.css
@@ -1,34 +1,41 @@
+body .traiding-container{
+  margin: 80px 0 0;
+}
 body .container {
     position: relative;
     display: flex;
     align-items: stretch;
     margin: 0px 100px !important;
-    background-color: #FFF8F4!important;
+    
+    background-color: #1A1310 !important;
   }
   
   body .container .navigation {
     /* padding: 25px 19px 25px 19px;  */
   
-    border: 1px solid rgba(61, 29, 0, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 0 !important;
   
     border-radius: 2px;
     width: 246px;
     height: auto;
     flex-shrink: 0;
-    background-color: #FFF8F4!important;
+    
+    background-color: #1A1310 !important;
   }
   
   body .container .navigation #aside {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    background-color: #FFF8F4!important;
+    
+    background-color: #1A1310 !important;
   }
   body .container .navigation #aside .list-group-item{
     padding: 20px 15px;
-    border-bottom: 1px solid rgba(61, 29, 0, 0.2);
-    background-color: #FFF8F4!important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+    
+    background-color: #1A1310 !important;
   }
   body .container .navigation #aside .list-group-item:last-child{
     margin-bottom: 0px;
@@ -36,29 +43,27 @@ body .container {
   }
   body .container .navigation #aside .list-group-item .text-title{
     margin-bottom: 16px;
-    font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 33px;
   
-    color: #271403;
+    color: #ffffff;
   }
   .checkbox{
-    font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 15px;
     line-height: 22px;
     padding-bottom: 2px;
+    color: #e7e7e7;
   }
   .text-number{
-    font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 19px;
-    color: #271403;
+    color: #ffffff;
     
   }
   .scroll {
@@ -71,8 +76,10 @@ body .container {
     max-width: 74px;
     height: 25px;
     border-radius: 8px;
+    padding-left: 5px;
     background: rgba(214, 204, 195, 0.2);
-    border: 1px solid rgba(39, 20, 3, 0.5);
+    color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(255, 255, 255, 0.5);
   }
   .number:last-child{
     margin-left: 0px;
@@ -83,21 +90,19 @@ body .container {
     width: 193px !important;
     height: 35px !important;
   
-
-    /* background: rgba(207, 125, 134, 0.5) !important; */
-    /* background: rgba(207, 125, 134, 0.12) !important; */
-    background: rgba(214, 204, 195, 0.2) !important;
-    border: 1px solid rgba(39, 20, 3, 0.5) !important;
-    border-radius: 8px !important;
+    /* background: rgba(214, 204, 195, 0.2) !important;
+    border: 1px solid rgba(39, 20, 3, 0.5) !important; */
+    color: #ffc05a !important;
+    border: 1px solid #ffc05a!important;
+    background-color: #1A1310 !important;
+    border-radius: 15px !important;
   
-    font-family: Crimson Text;
     font-style: normal;
     font-weight: normal;
     font-size: 14px !important;
     line-height: 17px;
     text-align: center !important;
   
-    color: #271403;
   }
   .btn-filter:last-child{
     margin-bottom: 0px !important;
@@ -110,7 +115,8 @@ body .container {
   
   
   .content {
-    background: #FFF8F4 !important;
+    
+    background-color: #1A1310 !important;
     
     min-height: 600px;
       height: auto;
