--- a/CosmeticShop/CosmeticShop/wwwroot/css/TraidingIndexProduct.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/TraidingIndexProduct.css
@@ -1,5 +1,6 @@
 body .card{
-    background-color: #FFF8F4!important;
+    
+    background-color: #1A1310 !important;
     width: 255px;
     height: auto;
     margin-bottom: 40px;
@@ -25,8 +26,8 @@ body .card .card-body .card-title{
     margin-top:5px;
     /* padding-left: 40px; */
     
-    color: #341900;
-    font-family: Crimson Text;
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif !important;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -37,34 +38,33 @@ body .card .card-body .card-subtitle{
     margin-top: 6px;
     /* padding-left: 45px; */
 
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
     font-style: normal;
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
-    color: rgba(61, 29, 0, 0.7);
+    color: rgba(255, 255, 255, 0.7);
     text-align: center;
 }
 body .card .card-body .card-price{
     padding-top: 15px;
-    font-family: 'Cormorant SC', serif;
+    font-family: 'Montserrat', sans-serif !important;
     font-style: normal;
     font-weight: 500;
     font-size: 22px;
     line-height: 17px;
     /* padding-left: 40px; */
     text-align: center;
-    color: #341900;
+    color: #ffffff;
 }
 body .card .card-body .card-price .card-price-cost{
     margin-left: 5px;
-    
-    font-family: 'Cormorant SC', serif;
+    font-family: 'Montserrat', sans-serif !important;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 14px;
-    color: rgba(61, 29, 0, 0.7);
+    color: rgba(255, 255, 255, 0.7);
 }
 body .card .card-body .btn{
     width: 200px;
@@ -73,12 +73,11 @@ body .card .card-body .btn{
     margin-bottom: 15px;
     padding: 12px 35px;
     border-radius: 30px !important;
-    background-color: #A93E4D;
+    color: #fff !important;
+    background-color:  #F6AF3D !important;
     
-    color: #fff;
-    font-family: 'Raleway', sans-serif;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 12px;
     line-height: 107.9%;
     letter-spacing: 0.02em; 
@@ -95,27 +94,29 @@ body .pagination-container nav .pagination .page-item-text {
 }
 body .pagination-container nav .pagination .page-item .page-link{
     border-radius:  30px !important;
-    color: #B37B65 !important;
+    
+    color: #000 !important;
+    border: 1px solid #ffc05a!important;
     margin: 0 5px;
     padding: 10px 20px;
 }
 body .pagination-container nav .pagination .page-item .page-linl-disabled{
     border-radius:  30px !important;
-    color: #B37B65 !important;
+    color: #000 !important;
     margin: 0 5px;
     padding: 10px 20px;
-    background-color: rgba(214, 204, 195, 0.2);;
 }
 body .pagination-container nav .pagination .page-item .page-link:hover{
-    background: rgba(207, 125, 134, 0.5);
-    color: #271403 !important;
+    color: #fff !important;
+    background-color: #ffc05a!important;
 }
 body .pagination-container nav .pagination .page-item .page-linl-disabled:hover{
     border-radius:  30px !important;
-    color: #B37B65 !important;
+    color: #fff !important;
     margin: 0 5px;
     padding: 10px 20px;
-    background-color: rgba(214, 204, 195, 0.2);;
+    border: 1px solid #ba7900!important;
+    background-color: #ba7900;
 }
 
 body .pagination-container{
