--- a/CosmeticShop/CosmeticShop/Views/Account/Register.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Account/Register.cshtml
@@ -1,5 +1,10 @@
 ﻿@model CosmeticShop.ViewModels.RegisterViewModel
 
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
 @* <h2>Регистрация нового пользователя</h2>
 <form method="post" asp-controller="Account" asp-action="Register">
     <div asp-validation-summary="ModelOnly"></div>
