--- a/CosmeticShop/CosmeticShop/Views/Account/Login.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Account/Login.cshtml
@@ -1,4 +1,11 @@
 ﻿@model CosmeticShop.ViewModels.LoginViewModel
+
+<style>
+    body {
+        background-color: #1A1310 !important;
+    }
+</style>
+
 @* 
 <h2>Вход в приложение</h2>
 <form method="post" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@Model.ReturnUrl">
