--- a/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
@@ -50,8 +50,8 @@
                 <a class="nav-link" href="#">Тело</a>
             </li>
         </ul>
-    </div> *@
-</section>
+    </div> 
+</section> *@
 
 
 <section class="traiding-container container">
