Check to Rspo cosmeticshop added

--- a/CosmeticShopRSPO/CosmeticShop/Views/Orders/Pay.cshtml
+++ b/CosmeticShopRSPO/CosmeticShop/Views/Orders/Pay.cshtml
@@ -31,6 +31,9 @@
                                maxlength="5">
                     </div>
                 </div>
+                <div>
+                    <a asp-controller="Orders" asp-action="Check" target="_blank">Create Check</a>
+                </div>
                 <div class="row">
                     <div class="col-md-6">
                         <input type="submit" value="MAKE A PAYMENT &nbsp; &#xf178;"
